kubedefs/mcdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprocache01
  labels:
    app: vprocache01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprocache01
  template:
    metadata:
      labels:
        app: vprocache01
    spec:
      containers:
        - name: vpromc
          image: memcached
          ports:
            - name: vpromc-port
              containerPort: 11211
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          args:
            - "-m"
            - "64"
            - "-p"
            - "11211"
