kubedefs/webservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproweb
  labels:
    app: vproweb
spec:
  selector:
    app: vproweb
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
