kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vproapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vprofile.xcaly.xyz
      secretName: vproapp-tls
  rules:
    - host: vprofile.xcaly.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vproweb
                port:
                  number: 80
